# LightningXML

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  ChangeLog.md  LICENSE  README.md  TODO.txt  build.sh  clean.sh  dev_rules.txt  format.sh
.github/workflows/: coverage.yml  static-analysis.yml
include/: LightningXML.hh  TurboXML.hh
test/: Helpers.hh  XSDSample.xsd  XSDSampleGenerated.hh  bench_LightningXML.cc  bench_TurboXML.cc  test_Conformance.cc  test_Generated.cc  test_Helpers.hh  test_LightningXML.cc  test_TurboXML.cc  test_XSDCodegen.cc  test_XsdCodegen.cc  xsd_sample_generated.hh
test/schemas/: base.xsd  common.xsd  kitchensink.xsd
tools/: XSDCodegen.hh  XSDGen.cc  XsdCodegen.hh  xsdgen.cc
